// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defineProject > c.security.manifest (ADR 013) > golden snapshot: security.manifest rules compile to a stable IR shape 1`] = `
{
  "components": {
    "api": {
      "allowEmpty": false,
      "name": "api",
      "selector": {
        "kind": "glob",
        "patterns": [
          "application/api/**",
        ],
      },
    },
  },
  "irVersion": "1",
  "rules": [
    {
      "id": "security.manifest.source-hygiene",
      "kind": "security.manifest.source-hygiene",
      "provenance": {},
    },
    {
      "id": "security.manifest.new-dependency",
      "kind": "security.manifest.new-dependency",
      "provenance": {},
    },
  ],
}
`;

exports[`defineProject > golden snapshot: a realistic layered project compiles to a stable IR shape 1`] = `
{
  "components": {
    "api": {
      "allowEmpty": false,
      "name": "api",
      "selector": {
        "kind": "glob",
        "patterns": [
          "application/api/**",
        ],
      },
    },
    "core": {
      "allowEmpty": false,
      "name": "core",
      "selector": {
        "kind": "glob",
        "patterns": [
          "packages/core/**",
        ],
      },
    },
    "ui": {
      "allowEmpty": false,
      "name": "ui",
      "selector": {
        "kind": "glob",
        "patterns": [
          "application/ui/**",
        ],
      },
    },
  },
  "irVersion": "1",
  "rules": [
    {
      "id": "arch.layers:api",
      "kind": "arch.layers",
      "layers": [
        {
          "canDependOn": [
            "core",
          ],
          "layer": "api",
        },
      ],
      "provenance": {},
    },
    {
      "from": "api",
      "id": "arch.no-dependency:api->core",
      "kind": "arch.no-dependency",
      "provenance": {},
      "to": "core",
    },
    {
      "from": "core",
      "id": "arch.no-dependency:core->api",
      "kind": "arch.no-dependency",
      "provenance": {},
      "to": "api",
    },
    {
      "from": "ui",
      "id": "arch.no-dependency:ui->core",
      "kind": "arch.no-dependency",
      "provenance": {},
      "to": "core",
    },
    {
      "from": "core",
      "id": "arch.no-dependency:core->ui",
      "kind": "arch.no-dependency",
      "provenance": {},
      "to": "ui",
    },
    {
      "id": "arch.no-cycles:repo",
      "includeTypeOnly": false,
      "kind": "arch.no-cycles",
      "provenance": {},
      "scope": "repo",
    },
  ],
}
`;

exports[`defineProject > golden snapshot: custom.host compiles to a stable IR shape 1`] = `
{
  "components": {
    "api": {
      "allowEmpty": false,
      "name": "api",
      "selector": {
        "kind": "glob",
        "patterns": [
          "application/api/**",
        ],
      },
    },
  },
  "irVersion": "1",
  "rules": [
    {
      "hostRuleName": "route-thinness",
      "id": "custom.host:route-thinness",
      "kind": "custom.host",
      "portable": false,
      "provenance": {
        "because": "Route handlers stay thin.",
      },
    },
  ],
}
`;

exports[`defineProject > golden snapshot: maxLinesPerFile compiles to a stable arch.metric IR shape 1`] = `
{
  "components": {
    "api": {
      "allowEmpty": false,
      "name": "api",
      "selector": {
        "kind": "glob",
        "patterns": [
          "application/api/**",
        ],
      },
    },
  },
  "irVersion": "1",
  "rules": [
    {
      "id": "arch.metric:loc:api",
      "kind": "arch.metric",
      "max": 800,
      "metric": "loc",
      "provenance": {
        "because": "Route/service files should decompose before they become build-worker.ts-shaped.",
      },
      "target": "api",
    },
  ],
}
`;
